<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="lang">en</string>
	<string formatted="false" name="about_version">Pasty Version %s (%d)</string>
    <string name="app_name">Pasty</string>
    <string name="app_label">Pasty - the cloud clipboard</string>
	<string name="app_logo">App Logo</string>
	
	<string name="app_share_via_pasty">Add to Pasty</string>
	<string name="app_share_from_pasty">Share Clipboard Item</string>
    
    <string name="copy">Copy</string>
    
    <string name="dialog_item_add_title">Paste new item into cloud</string>
    <string name="dialog_item_add_title_running">Sending item to cloud&#8230;</string>
    
    <string name="helptext_PastyActivity_pasty">Paste item to cloud.</string>
    <string name="helptext_PastyActivity_copy">Touch an item to copy</string>
    <string name="helptext_PastyActivity_options">Press and hold for options</string>
    <string name="helptext_PastyActivity_loading">Loading items from cloud&#8230;</string>
    <string name="helptext_PastyActivity_clipboard_empty">Your Clipboard is empty!</string>
    <string name="helptext_PastyActivity_how_to_add">Use the Plus sign to add something</string>
    <string name="helptext_PastyActivity_error_occured">An error occurred. Please try again.</string>
    <string name="NewItem_hint">Paste new item here</string>
    <string name="PastyButton_label">Send to cloud!</string>
    <string name="item_copied">Copied text to local clipboard</string>
    <string name="item_adding">Adding your item to Pasty Clipboard&#8230;</string>
    <string name="item_added">Added text to Pasty Clipboard</string>
    <string name="item_deleted">Item deleted from Pasty Clipboard</string>
    <string name="empty_item">Cannot add empty item</string>
    
    <string name="button_ok">Okay</string>
    <string name="button_noes">Oh noes!</string>
    <string name="button_exit">Exit</string>
    <string name="button_get_started">Let\'s get started!</string>
    
    <string name="settings">Settings</string>
	<string name="about">About</string>
	<string name="add">Add</string>
	<string name="reload">Reload</string>
	<string name="login">Login</string>
	<string name="behaviour">Behaviour</string>
	<string name="network">Network</string>
	<string name="misc">Misc</string>
	
	<string name="pref_account_create_title">Create Account</string>
	
	<string name="pref_username_title">Username</string>
	<string name="pref_username_defsum">No username set</string>
	<string name="pref_username_default"></string>
		
	<string name="pref_password_title">Password</string>
	<string name="pref_password_defsum">No password set</string>
	<string name="pref_password_sum_isset">Password is set</string>
	<string name="pref_password_default"></string>
	
	<string name="pref_paste_clipboard_title">Automatic Pasting</string>
	<string name="pref_paste_clipboard_sum">Automatically paste device clipboard contents into input box when adding a new item</string>
	
	<string name="pref_clickable_links_title">Clickable Links</string>
	<string name="pref_clickable_links_sum">Touching Links opens a browser</string>
	
	<string name="pref_push_title">Clipboard Push</string>
	<string name="pref_push_not_available_sum">Push only available with a Google device</string>
    <string name="pref_push_sum">Push new Items to Device</string>
    <string name="pref_push_enabled_sum">Push is activated</string>
    <string name="pref_push_disabled_sum">Push is deactivated</string>
	<string name="pref_push_copy_to_clipboard_title">Copy to Clipboard</string>
	<string name="pref_push_copy_to_clipboard_sum">Automatically Copy to Device Clipboard</string>
    <string name="pref_push_notify_title">Notify on New Item</string>
    <string name="pref_push_notify_sum">Open Notification or Toast</string>
	
	<string name="pref_usehttps_title">Transport Encryption</string>
	<string name="pref_usehttps_sum">Uncheck if you have trouble connecting to server</string>
	
	<string name="pref_server_title">Pasty Server</string>
	<string name="pref_server_sum">Choose which Pasty Server to use (dev-setting)</string>
	
	<string name="itemContextMenuTitle">Clipboard Item</string>
	<string-array name="itemContextMenu">
	    <item>Copy without exiting</item>
	    <item>Share</item>
	    <item>Delete</item>
	</string-array>
	<string name="itemContextMenu_open">Open in browser</string>
	
	<string name="pref_tos_title">Terms of Service</string>
	<string name="pref_privacy_title">Privacy Policy</string>
	
	<string name="pref_version_title">Version</string>
	
    <string name="error_badanswer_title">Problem talking to server</string>
    <string name="error_badanswer">Try again later (invalid answer)</string>
    <string name="error_io_title">Problem talking to server</string>
    <string name="error_io">Try again later (no connection)</string>
    <string name="error_no_network_title">No network available</string>
    <string name="error_no_network">Please enable a network connection to use Pasty</string>
    <string name="error_not_supported">This feature is not supported yet</string>
    <string name="error_login_failed_title">Login failed</string>
    <string name="error_login_failed">Please make sure you specified your account correctly</string>
    <string name="error_credentials_not_set_title">Welcome!</string>
    <string name="error_credentials_not_set">You need to provide the login data to your Pasty account</string>
    <string name="error_unknown_title">Unknown error occurred!</string>
    <string name="error_unknown">Please try again later or check for an App update</string>
    <string name="error_adding">An error occurred while adding your item</string>
    <string name="error_adding_offline">Sorry, you need to be online to add something</string>
    <string name="warning_no_network">No network available, showing cached clipboard</string>
	<string name="warning_no_network_short">No network, cannot refresh</string>
	
	<string name="notification_event_add_title">New Item Available</string>
	<string name="notification_event_add_text">Copy \"%s\" to clipboard</string>
</resources>