<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
        <PreferenceCategory
                android:title="@string/login">
                <Preference
		                android:key="pref_account_create"
                    	android:name="pref_account_create"
                    	android:title="@string/pref_account_create_title" />
		        <EditTextPreference
		                android:name="pref_username"
		                android:defaultValue="@string/pref_username_default"
		                android:title="@string/pref_username_title"
		                android:singleLine="true"
		                android:key="pref_username" />
		        <EditTextPreference
		                android:name="pref_password"
		                android:defaultValue="@string/pref_password_default"
		                android:title="@string/pref_password_title"
		                android:singleLine="true"
						android:password="true"
		                android:key="pref_password" />
        </PreferenceCategory>
        <PreferenceCategory
                android:title="@string/behaviour">			        
                <CheckBoxPreference
                        android:title="@string/pref_paste_clipboard_title"
                        android:defaultValue="true"
                        android:summary="@string/pref_paste_clipboard_sum"
                        android:key="pref_paste_clipboard" />    
                <CheckBoxPreference
                        android:title="@string/pref_clickable_links_title"
                        android:defaultValue="false"
                        android:summary="@string/pref_clickable_links_sum"
                        android:key="pref_clickable_links" />
                <ListPreference
				        android:defaultValue="0"
				        android:numeric="integer"
				        android:dialogTitle="@string/pref_push_dialog_title"
				        android:entries="@array/pref_push_entries"
				        android:entryValues="@array/pref_push_values"
				        android:key="pref_push"
				        android:title="@string/pref_push_title" />
        </PreferenceCategory>
        <PreferenceCategory
                android:title="@string/network">
                <CheckBoxPreference
                        android:title="@string/pref_usehttps_title"
                        android:defaultValue="true"
                        android:summary="@string/pref_usehttps_sum"
                        android:key="pref_usehttps" />
        </PreferenceCategory>
        <PreferenceCategory
                android:title="@string/about">
                <Preference 
		                android:key="pref_tos"
		                android:title="@string/pref_tos_title" />
                <Preference 
		                android:key="pref_privacy"
		                android:title="@string/pref_privacy_title" />
                <Preference 
		                android:key="pref_version"
		                android:title="@string/pref_version_title" />
        </PreferenceCategory>
</PreferenceScreen>