<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
		    <TextView 
			    android:id="@+id/textview"
			    android:layout_width="fill_parent"
			    android:layout_height="fill_parent"
			    android:gravity="center_vertical|center_horizontal"
			    android:text="@string/helptext_PastyActivity_pasty"
			    android:textColor="#1874CD"
			    android:textSize="16sp"
			    android:textStyle="italic"
			    android:shadowColor="#999999"
		        android:shadowRadius="1.5"
		        android:shadowDx="1.5"
		        android:shadowDy="1.5"/>

		    <EditText
		        android:id="@+id/NewClip"
		        android:hint="@string/NewClip_hint"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content" >

		        <requestFocus />
		    </EditText>

		    <Button
		        android:id="@+id/PastyButton"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/PastyButton_label" />
		    
		    <ScrollView
	android:layout_height="wrap_content"
    android:layout_width="fill_parent" >
	<TableLayout 
	    android:id="@+id/myTableLayout"
	    android:layout_height="wrap_content"
  		android:layout_width="fill_parent" >


		    <TextView 
			    android:id="@+id/textview2"
			    android:layout_width="fill_parent"
			    android:layout_height="fill_parent"
			    android:gravity="center_vertical|center_horizontal"
			    android:text="@string/helptext_PastyActivity_copy"
			    android:textColor="#1874CD"
			    android:textSize="16sp"
			    android:textStyle="italic"
			    android:shadowColor="#999999"
		        android:shadowRadius="1.5"
		        android:shadowDx="1.5"
		        android:shadowDy="1.5"/>
	</TableLayout>
</ScrollView>

		    <TextView 
			    android:id="@+id/tv_loading"
			    android:layout_width="fill_parent"
			    android:layout_height="fill_parent"
			    android:gravity="center_vertical|center_horizontal"
			    android:text="@string/helptext_PastyActivity_loading"
			    android:textSize="14sp"/>
<ProgressBar
       style="?android:attr/progressBarStyle"
       android:layout_gravity="center_horizontal"
       android:id="@+id/progressbar_downloading"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content" 
/>
</RelativeLayout>